--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Indiabulls Dhani - Instant Personal Loans</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/main.css" />
+<link rel="stylesheet" href="assets/css/main.css?v=3" />
 
   <style>
     /* Popup Modal */
@@ -298,3 +298,4 @@
 </body>
 
 </html>
+
