--- a/index.html
+++ b/index.html
@@ -72,16 +72,24 @@
 
 <header class="main-header">
   <div class="container nav">
-    <h2>Indiabulls Dhani</h2>
-    <ul class="main-menu__list">
+    <h2 class="logo">Indiabulls Dhani</h2>
+
+    <!-- Hamburger -->
+    <div class="hamburger" id="hamburger">☰</div>
+
+    <!-- Menu -->
+    <ul class="main-menu__list" id="mobileMenu">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="faq.html">FAQ</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
+      <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="javascript:void(0)" class="thm-btn mobile-apply" id="openEnquiryBtn">Apply For Loan</a></li>
     </ul>
-    <a href="javascript:void(0)" class="thm-btn" id="openEnquiryBtn">Apply For Loan</a>
+
+    <!-- Desktop button -->
+    <a href="javascript:void(0)" class="thm-btn desktop-apply" id="openEnquiryBtnDesktop">Apply For Loan</a>
   </div>
 </header>
 
@@ -298,4 +306,5 @@
 </body>
 
 </html>
+
 
