--- a/index.html
+++ b/index.html
@@ -87,6 +87,27 @@
       <li><a href="contact.html">Contact</a></li>
       <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
     </ul>
+    <header class="main-header">
+  <div class="container nav">
+    <h2>Indiabulls Dhani</h2>
+
+    <!-- Hamburger -->
+    <div class="menu-toggle" onclick="document.querySelector('.main-menu__list').classList.toggle('active')">
+      ☰
+    </div>
+
+    <ul class="main-menu__list">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
+    </ul>
+
+    <a href="javascript:void(0)" class="thm-btn"></a>
+  </div>
+</header>
   </div>
 </header>
 
