--- a/index.html
+++ b/index.html
@@ -86,10 +86,7 @@
       <li><a href="contact.html">Contact</a></li>
       <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
     </ul>
-
-    <a href="javascript:void(0)" class="thm-btn"></a>
-  </div>
-</header>
+    <a href="javascript:void(0)" class="thm-btn" id="openEnquiryBtn">Apply For Loan</a>
   </div>
 </header>
 
@@ -311,6 +308,7 @@
 </body>
 
 </html>
+
 
 
 
