--- a/index.html
+++ b/index.html
@@ -86,11 +86,7 @@
       <li><a href="contact.html">Contact</a></li>
       <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
     </ul>
-  </div>
-</header>
-
-    <!-- Desktop button -->
-    <a href="javascript:void(0)" class="thm-btn desktop-apply" id="openEnquiryBtnDesktop">Apply For Loan</a>
+    <a href="javascript:void(0)" class="thm-btn" id="openEnquiryBtn">Apply For Loan</a>
   </div>
 </header>
 
