--- a/index.html
+++ b/index.html
@@ -70,26 +70,23 @@
 </head>
 <body>
 <header class="main-header">
-  <div class="container nav">
-    <h2>Indiabulls Dhani</h2>
+ <div class="container nav">
+  <h2>Indiabulls Dhani</h2>
 
-    <!-- Hamburger -->
-    <div class="menu-toggle" onclick="document.querySelector('.main-menu__list').classList.toggle('active')">
-      ☰
-    </div>
+  <!-- Ye line add karo -->
+  <span class="menu-toggle" onclick="document.querySelector('.main-menu__list').classList.toggle('active')">☰</span>
 
-    <ul class="main-menu__list">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="faq.html">FAQ</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
-    </ul>
+  <ul class="main-menu__list">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="faq.html">FAQ</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
+  </ul>
 
-    <a href="javascript:void(0)" class="thm-btn" id="openEnquiryBtn">Apply For Loan</a>
-  </div>
-</header>
+  <a href="javascript:void(0)" class="thm-btn" id="openEnquiryBtn">Apply For Loan</a>
+</div>
 
 <!-- HERO -->
 <section class="hero container section" id="heroSlider">
@@ -303,4 +300,5 @@
 
 </body>
 </html>
+
 
