--- a/index.html
+++ b/index.html
@@ -70,24 +70,26 @@
 </head>
 <body>
 <header class="main-header">
- <div class="container nav">
-  <h2>Indiabulls Dhani</h2>
+  <div class="container nav">
+    <h2>Indiabulls Dhani</h2>
 
-  <!-- Ye line add karo -->
-  <span class="menu-toggle" onclick="document.querySelector('.main-menu__list').classList.toggle('active')">☰</span>
+    <!-- Hamburger -->
+    <div class="menu-toggle" onclick="document.querySelector('.main-menu__list').classList.toggle('active')">
+      ☰
+    </div>
 
-  <ul class="main-menu__list">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="faq.html">FAQ</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
-  </ul>
+    <ul class="main-menu__list">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
+    </ul>
 
-  <a href="javascript:void(0)" class="thm-btn" id="openEnquiryBtn">Apply For Loan</a>
-</div>
-
+    <a href="javascript:void(0)" class="thm-btn" id="openEnquiryBtn">Apply For Loan</a>
+  </div>
+</header>
 <!-- HERO -->
 <section class="hero container section" id="heroSlider">
   <div>
@@ -300,5 +302,6 @@
 
 </body>
 </html>
+
 
 
