--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
   </style>
 </head>
 <body>
+
 <header class="main-header">
   <div class="container nav">
     <h2>Indiabulls Dhani</h2>
-
-    <!-- Hamburger -->
+<!-- Hamburger -->
     <div class="menu-toggle" onclick="document.querySelector('.main-menu__list').classList.toggle('active')">
       ☰
     </div>
@@ -86,8 +86,15 @@
       <li><a href="contact.html">Contact</a></li>
       <li><a href="javascript:void(0)" id="openEnquiryNav">Enquiry</a></li>
     </ul>
+    <a href="javascript:void(0)" class="thm-btn" id="openEnquiryBtn">Apply For Loan</a>
   </div>
 </header>
+
+    <!-- Desktop button -->
+    <a href="javascript:void(0)" class="thm-btn desktop-apply" id="openEnquiryBtnDesktop">Apply For Loan</a>
+  </div>
+</header>
+
 <!-- HERO -->
 <section class="hero container section" id="heroSlider">
   <div>
@@ -299,8 +306,5 @@
 </script>
 
 </body>
+
 </html>
-
-
-
-
