--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Indiabulls Dhani - Instant Personal Loans</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="assets/css/main.css?v=3" />
+  <link rel="stylesheet" href="assets/css/main.css" />
 
   <style>
     /* Popup Modal */
@@ -58,7 +58,7 @@
 }
 
     /* Floating buttons */
-    .float-call,.float-whatsapp{position:fixed;top:80%;transform:translateY(-50%);z-index:9999}
+    .float-call,.float-whatsapp{position:fixed;top:70%;transform:translateY(-50%);z-index:9999}
     .float-call{left:15px}
     .float-whatsapp{right:15px}
     .float-btn{display:flex;align-items:center;gap:8px;padding:10px 14px;border-radius:50px;color:#fff;font-weight:bold;text-decoration:none;box-shadow:0 6px 15px rgba(0,0,0,.25);font-size:14px}
@@ -73,11 +73,6 @@
 <header class="main-header">
   <div class="container nav">
     <h2>Indiabulls Dhani</h2>
-<!-- Hamburger -->
-    <div class="menu-toggle" onclick="document.querySelector('.main-menu__list').classList.toggle('active')">
-      ☰
-    </div>
-
     <ul class="main-menu__list">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -90,7 +85,6 @@
   </div>
 </header>
 
-
 <!-- HERO -->
 <section class="hero container section" id="heroSlider">
   <div>
@@ -98,6 +92,7 @@
     <p>Fast approval, minimal documentation, and quick disbursal directly to your bank account.</p>
     <a href="javascript:void(0)" class="thm-btn" id="openEnquiryHero">Apply Now</a>
   </div>
+  <img src="assets/images/hero.jpddg" alt="">
 </section>
 
 <!-- FEATURES -->
@@ -302,7 +297,4 @@
 </script>
 
 </body>
-
 </html>
-
-
